# copilot-hackathon-experiment

./: .gitignore  HUMOR_SCORING.md  README.md  data_pipeline.py  demo_enhanced_humor_scores.py  pyproject.toml
chats/test_chat/: 2023-04-05.json
chats/test_chat/processed/: chat.json  chat_with_scores.json
chats/test_chat/raw/: 2023-04-04.json  2023-04-05.json
src/data_pipeline/: cli.py  data_pipeline.py  extract.py  utils.py
tests/data_pipeline/: test_extract.py  test_main.py  test_utils.py
